--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ ALGORITHM = "HS256"
 
 
 
-TEST_DATABASE_URL = "mongodb://localhost:27017/"
-TEST_DB_NAME = "fastapi_test_db"
+TEST_DATABASE_URL = mongodb://localhost:27017/
+TEST_DB_NAME = fastapi_test_db
