formate code and add docker file docker compose up and github action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: fast_api
+name: CI Workflow
 
 on:
   push:
@@ -19,6 +19,15 @@ jobs:
         ports:
           - 27017:27017
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }} 
+      DB_NAME: ${{ secrets.DB_NAME }}            
+      TEST_DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
+      TEST_DB_NAME: ${{ secrets.TEST_DB_NAME }} 
+      SECRET_KEY: ${{ secrets.SECRET_KEY }} 
+      ALGORITHM: ${{ secrets.ALGORITHM }}  
+
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -36,7 +45,7 @@ jobs:
     - name: Lint code with flake8
       run: |
         pip install flake8
-        flake8 . --max-line-length=88
+        flake8 . --max-line-length=79
 
     - name: Run tests with pytest
       run: |
