--- a/.env_example
+++ b/.env_example
@@ -1,10 +1,16 @@
 DATABASE_URL = mongodb://localhost:27017/
 DB_NAME = fast_api_db
 
-SECRET_KEY = "bGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"
+SECRET_KEY = "bGciOiJIUzI1NiIsInR5jijijgije0eokokjwe9"
 ALGORITHM = "HS256"
-
-
 
 TEST_DATABASE_URL = mongodb://localhost:27017/
 TEST_DB_NAME = fastapi_test_db
+
+
+
+DATABASE_URL_DOCKER=mongodb://mongo_db:27017/
+DB_NAME_DOCKER=fast_api_db
+
+TEST_DATABASE_URL_DOCKER=mongodb://mongo_db:27017/
+TEST_DB_NAME_DOCKER=fastapi_test_db
