--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Workflow
+name: FastAPI with MongoDB CI
 
 on:
   push:
@@ -8,36 +8,27 @@ on:
     branches:
       - development
 
-      
 jobs:
-  lint_and_test:
+  test:
     runs-on: ubuntu-latest
 
     services:
-      mongo:
-        image: mongo:6.0
-        options: >-
-          --health-cmd="mongo --eval 'db.stats()'"
-          --health-interval=30s
-          --health-timeout=10s
-          --health-retries=10
+      mongodb:
+        image: mongo:latest
         ports:
           - 27017:27017
-
-    env:
-      DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      DB_NAME: ${{ secrets.DB_NAME }}
-      TEST_DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
-      TEST_DB_NAME: ${{ secrets.TEST_DB_NAME }}
-      SECRET_KEY: ${{ secrets.SECRET_KEY }}
-      ALGORITHM: ${{ secrets.ALGORITHM }}
+        options: >-
+          --health-cmd "mongo --eval 'db.runCommand(\"ping\").ok'"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v3
 
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
         python-version: '3.9'
 
@@ -46,29 +37,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Lint code with flake8
+    - name: Run tests
+      env:
+        MONGODB_URI: mongodb://localhost:27017/testdb
       run: |
-        pip install flake8
-        flake8 . --max-line-length=79
-
-    - name: Wait for MongoDB to initialize
-      run: |
-        echo "Waiting for MongoDB to initialize..."
-        sleep 30
-
-    - name: Wait for MongoDB to start
-      run: |
-        echo "Waiting for MongoDB to start..."
-        for i in {1..30}; do
-          if mongo --eval 'db.stats()' > /dev/null 2>&1; then
-            echo "MongoDB is ready!"
-            break
-          fi
-          echo "MongoDB not ready, waiting 2 seconds..."
-          sleep 2
-        done
-
-    - name: Run tests with pytest
-      run: |
-        pip install pytest
-        pytest --maxfail=1 --disable-warnings -q
+        pytest
