--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,34 +12,33 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    services:
-      mongodb:
-        image: mongo:5.0  # You can specify a version like mongo:5.0 for stability
-        ports:
-          - 27017:27017
-        options: >-
-          --health-cmd "mongo --eval 'db.runCommand(\"ping\").ok'"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+    # services:
+      
+    #   mongodb:
+    #     image: mongo:5.0 
+    #     ports:
+    #       - 27017:27017
+    #     options: >-
+    #       --health-cmd "mongo --eval 'db.runCommand(\"ping\").ok'"
+    #       --health-interval 10s
+    #       --health-timeout 5s
+    #       --health-retries 5
 
-    env:
-      # Define all your environment variables here
-      DATABASE_URL: mongodb://mongo_db:27017/   # Use docker service name as URL
-      DB_NAME: fast_api_db
-      SECRET_KEY: "bGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"
-      ALGORITHM: "HS256"
-      TEST_DATABASE_URL: mongodb://mongo_db:27017/   # Use docker service name for tests
-      TEST_DB_NAME: fastapi_test_db
+    # env:
 
-      # Docker specific values
-      DATABASE_URL_DOCKER: mongodb://mongo_db:27017/
-      DB_NAME_DOCKER: fast_api_db
-      TEST_DATABASE_URL_DOCKER: mongodb://mongo_db:27017/
-      TEST_DB_NAME_DOCKER: fastapi_test_db
+    #   DATABASE_URL: mongodb://mongo_db:27017/   # Use docker service name as URL
+    #   DB_NAME: fast_api_db
+    #   SECRET_KEY: "bGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"
+    #   ALGORITHM: "HS256"
+    #   TEST_DATABASE_URL: mongodb://mongo_db:27017/   # Use docker service name for tests
+    #   TEST_DB_NAME: fastapi_test_db
 
-      # If you use GitHub secrets for MONGODB_URI_SECRET, ensure it's set properly
-      # MONGODB_URI: ${{ secrets.MONGODB_URI_SECRET }}
+    #   DATABASE_URL_DOCKER: mongodb://mongo_db:27017/
+    #   DB_NAME_DOCKER: fast_api_db
+    #   TEST_DATABASE_URL_DOCKER: mongodb://mongo_db:27017/
+    #   TEST_DB_NAME_DOCKER: fastapi_test_db
+
+    #   # MONGODB_URI: ${{ secrets.MONGODB_URI_SECRET }}
 
     steps:
     - name: Checkout repository
@@ -54,6 +53,17 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
+    - name: Set environment variabes
+      run: |
+        echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
+        echo "DB_NAME=${{ secrets.DB_NAME }}" >> $GITHUB_ENV
+        echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> $GITHUB_ENV
+        echo "ALGORITHM=${{ secrets.ALGORITHM }}" >> $GITHUB_ENV
+        echo "TEST_DATABASE_URL=${{ secrets.TEST_DATABASE_URL }}" >> $GITHUB_ENV
+        echo "TEST_DB_NAME=${{ secrets.TEST_DB_NAME }}" >> $GITHUB_ENV
+        echo "DATABASE_URL_DOCKER=${{ secrets.DATABASE_URL_DOCKER }}" >> $GITHUB_ENV
+        echo "DB_NAME_DOCKER=${{ secrets.DB_NAME_DOCKER }}" >> $GITHUB_ENV
 
     - name: Run tests
       run: |
