--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,17 +12,16 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    # services:
-      
-    #   mongodb:
-    #     image: mongo:5.0 
-    #     ports:
-    #       - 27017:27017
-    #     options: >-
-    #       --health-cmd "mongo --eval 'db.runCommand(\"ping\").ok'"
-    #       --health-interval 10s
-    #       --health-timeout 5s
-    #       --health-retries 5
+    services:
+      mongodb:
+        image: mongo:5.0 
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd "mongo --eval 'db.runCommand(\"ping\").ok'"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     # env:
 
