--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,22 +23,6 @@ jobs:
           --health-timeout 5s
           --health-retries 5
 
-    # env:
-
-    #   DATABASE_URL: mongodb://mongo_db:27017/   # Use docker service name as URL
-    #   DB_NAME: fast_api_db
-    #   SECRET_KEY: "bGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"
-    #   ALGORITHM: "HS256"
-    #   TEST_DATABASE_URL: mongodb://mongo_db:27017/   # Use docker service name for tests
-    #   TEST_DB_NAME: fastapi_test_db
-
-    #   DATABASE_URL_DOCKER: mongodb://mongo_db:27017/
-    #   DB_NAME_DOCKER: fast_api_db
-    #   TEST_DATABASE_URL_DOCKER: mongodb://mongo_db:27017/
-    #   TEST_DB_NAME_DOCKER: fastapi_test_db
-
-    #   # MONGODB_URI: ${{ secrets.MONGODB_URI_SECRET }}
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
@@ -66,4 +50,4 @@ jobs:
 
     - name: Run tests
       run: |
-        pytest
+        pytest -v
