--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
+    
     - name: Set environment variabes
       run: |
         echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
@@ -47,6 +47,10 @@ jobs:
         echo "TEST_DB_NAME=${{ secrets.TEST_DB_NAME }}" >> $GITHUB_ENV
         echo "DATABASE_URL_DOCKER=${{ secrets.DATABASE_URL_DOCKER }}" >> $GITHUB_ENV
         echo "DB_NAME_DOCKER=${{ secrets.DB_NAME_DOCKER }}" >> $GITHUB_ENV
+
+    - name: Run flake8
+      run: |
+        flake8 
 
     - name: Run tests
       run: |
