added aws s3 upload

--- a/.env_example
+++ b/.env_example
@@ -14,3 +14,8 @@ DB_NAME_DOCKER=fast_api_db
 
 TEST_DATABASE_URL_DOCKER=mongodb://mongo_db:27017/
 TEST_DB_NAME_DOCKER=fastapi_test_db
+
+
+
+AWS_SECRET_ACCESS_KEY=""
+AWS_ACCESS_KEY_ID=""
