--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,9 @@ services:
       - ALGORITHM=${ALGORITHM}
       - TEST_DATABASE_URL=${TEST_DATABASE_URL_DOCKER}
       - TEST_DB_NAME=${TEST_DB_NAME_DOCKER}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+    
     networks:
       - fastapi-mongo-network
     depends_on:
