--- a/.env_example
+++ b/.env_example
@@ -1,7 +1,7 @@
 DATABASE_URL = mongodb://localhost:27017/
 DB_NAME = fast_api_db
 
-SECRET_KEY = "bGciOiJIUzI1NiIsInR5jijijgije0eokokjwe9"
+SECRET_KEY = "testsecretkey"
 ALGORITHM = "HS256"
 
 TEST_DATABASE_URL = mongodb://localhost:27017/
