--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,11 +17,14 @@ services:
       - TEST_DB_NAME=${TEST_DB_NAME_DOCKER}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - REDIS_HOST=${REDIS_HOST_DOCKER}
+      - REDIS_PORT=${REDIS_PORT_DOCKER}
     
     networks:
       - fastapi-mongo-network
     depends_on:
       - mongo_db
+      - redis
     
   mongo_db:
     image: mongo:latest
@@ -30,6 +33,14 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+    networks:
+      - fastapi-mongo-network
+
+  redis:
+    image: redis:latest
+    container_name: redis_container
+    ports:
+      - "6379:6379"
     networks:
       - fastapi-mongo-network
   
