updated example nev

--- a/.env_example
+++ b/.env_example
@@ -8,6 +8,15 @@ TEST_DATABASE_URL = mongodb://localhost:27017/
 TEST_DB_NAME = fastapi_test_db
 
 
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
+
+
+REDIS_HOST_DOCKER=redis
+REDIS_PORT_DOCKER=6379
+
+
 
 DATABASE_URL_DOCKER=mongodb://mongo_db:27017/
 DB_NAME_DOCKER=fast_api_db
